--- a/GTS4/index.html
+++ b/GTS4/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mr Smith's Awesome Webpage</title>
+    <title>Get to School 4 Gaming Website</title>
 </head>
 <body>
-<a href="GTS4/www/index.html">Click here to play my game</a>    
+<a href="GTS4/www/index.html">Click here to play my game!</a>    
+<p>If the game doesn't work then I'm not really smart</p>
 </body>
 </html>
