--- a/GTS4/index.html
+++ b/GTS4/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Get to School 4 Gaming Website</title>
+    <title>Gage26554.github.io</title>
 </head>
 <body>
 <a href= "Get to School 4.html" Click here to play my game!></a>
