Yo!!! Makin progress!!

--- a/Page 1.html
+++ b/Page 1.html
@@ -62,7 +62,10 @@
         <div class="pages"> <a href="Page 2.html">Page 2</a></div>
         <div class="pages"> <a href="Page 3.html">Page 3</a></div>
         <div class="pages"> <a href="Page 4.html">Page 4</a></div>
-        <h1>A bit about Gage</h1>
-        <p>Hi, I'm Gage Paul and I'm a 9th grade student at York Tech. </p> 
+        <h1>Html and Css syntax</h1>
+        <p>Some of the things we learned was Html and Css Syntax. There's a lot of gosh dang attributes to know
+            Css syntax was pretty easy, but sometimes you would forget how to do one thing so you would have to go to
+            w3w schools to help you figure out what you forgot.
+        </p> 
     </body>
 </html>
