--- a/Page 4.html
+++ b/Page 4.html
@@ -62,7 +62,11 @@
         <div class="pages"> <a href="Page 2.html">Page 2</a></div>
         <div class="pages"> <a href="Page 3.html">Page 3</a></div>
         <div class="pages"> <a href="Page 4.html">Page 4</a></div>
-        <h1>A bit about Gage</h1>
-        <p>Hi, I'm Gage Paul and I'm a 9th grade student at York Tech. </p> 
+        <h1>Rpg Maker Mv</h1>
+        <p>Rpg maker Mv is one of the coolest things that we did in my opinion. We were making a game! 
+            You can't tell me that's cool. With Rpg maker we learned about flowcharts, variables, and switchs! 
+            And we used that to make our own game pretty cool man.
+            <a href="Get to School 4.html">Click to Play Get to School 4</a>
+        </p> 
     </body>
 </html>
