--- a/Page 4.html
+++ b/Page 4.html
@@ -77,6 +77,6 @@
             guards attack you.
         </p> 
         <p>
-            <a href="Get to School 4.html"><img src="Rpg Maker Mv Load screen.png"></a> 
+            <a href="file:///C:/Users/Gage26554/OneDrive%20-%20York%20County%20School%20of%20Technology/Documents/GitHub/GTS4/www/index.html"><img src="Rpg Maker Mv Load screen.png"></a> 
         </p>
     </body>
