--- a/Page 4.html
+++ b/Page 4.html
@@ -77,6 +77,6 @@
             guards attack you.
         </p> 
         <p>
-            <a href="index.html"><img src="Rpg Maker Mv Load screen.png"></a> 
+            <a href="C:\Users\Gage26554\OneDrive - York County School of Technology\Documents\GitHub\Gage26554.github.io\GTS4\index.html"><img src="Rpg Maker Mv Load screen.png"></a> 
         </p>
     </body>
