I can't believe I was tricked

--- a/Page 1.html
+++ b/Page 1.html
@@ -8,13 +8,6 @@
             background-color: lightgreen;
         }
         
-        header {
-            border: 2px ridge #000000;
-            display: flex;
-            position: relative;
-            font-size: 3rem;
-        }
-        
         div {
             display: flex;
             align-items: center;
@@ -59,14 +52,13 @@
         }
         </style>
     </head>
-    <body>
-        <div>
-            <div class="pages"> <a href="Portfolio.html">Main Page</a></div>
-            <div class="pages"> <a href="Page 1.html">Page 1</a></div>
-            <div class="pages"> <a href="Page 2.html">Page 2</a></div>
-            <div class="pages"> <a href="Page 3.html">Page 3</a></div>
-            <div class="pages"> <a href="Page 4.html">Page 4</a></div>
-        </div>
+    <body><div>
+        <div class="pages"> <a href="Portfolio.html">Main Page</a></div>
+        <div class="pages"> <a href="Page 1.html">Page 1</a></div>
+        <div class="pages"> <a href="Page 2.html">Page 2</a></div>
+        <div class="pages"> <a href="Page 3.html">Page 3</a></div>
+        <div class="pages"> <a href="Page 4.html">Page 4</a></div>
+    </div>
         <h1>Html and Css syntax</h1>
         <p>Some of the things we learned was Html and Css Syntax. There's a lot of gosh dang attributes to know for example p enclosed in < > would 
             be used to add a paragraph.
