--- a/Page 4.html
+++ b/Page 4.html
@@ -69,6 +69,6 @@
             And we used that to make our own game pretty cool man. With switches we were able to create a market 
             stall stealing event where if you got caught it activated a switch that made it so the seller would have 
             guards attack you. 
-            <a href="C:\Users\Gage26554\OneDrive - York County School of Technology\Documents\GitHub\Gage26554.github.io\GTS4\index.html">Get to School 4</a>
+            <a href="index.html">Get to School 4</a>
         </p> 
     </body>
